--- a/ada.html
+++ b/ada.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ada Lovelace</title>
+    <link href="style.css" rel="stylesheet">
 </head>
 <body>
     <h1>Mulheres que fizeram história na tecnologia</h1>
