--- a/ada.html
+++ b/ada.html
@@ -59,6 +59,14 @@
             <li><a href="https://pt.wikipedia.org/wiki/Katherine_Johnson" target="_blank">Katherine Johnson</a></li>
         </ul>
     </nav>
+    <h4>Quer saber mais? Deixe seu e-mail</h4>
+    <form>
+        <label for="user-name">Nome: </label>
+        <input id="user-name" type="text" placeholder="Nome">
+        <label for="user-email">E-mail: </label>
+        <input id="user-email" type="email" placeholder="E-mail">
+        <button id="enviar">Enviar</button>
+    </form>
     
 </body>
 </html>
