--- a/ada.html
+++ b/ada.html
@@ -61,12 +61,13 @@
     </nav>
     <h4>Quer saber mais? Deixe seu e-mail</h4>
     <form>
-        <label for="user-name">Nome: </label>
-        <input id="user-name" type="text" placeholder="Nome">
-        <label for="user-email">E-mail: </label>
-        <input id="user-email" type="email" placeholder="E-mail">
+        <label for="nome">Nome: </label>
+        <input id="nome" type="text" placeholder="Nome">
+        <label for="email">E-mail: </label>
+        <input id="email" type="email" placeholder="E-mail">
         <button id="enviar">Enviar</button>
     </form>
-    
+
+    <script type="text/javascript" src="script.js"></script>    
 </body>
 </html>
